# rag-notebook-to-microservices

./: README.md  sentence_window_node_parser_rag.ipynb
inference-service/backend/: .env.example  README.md  main.py  pyproject.toml
inference-service/backend/app/api/routers/: chat.py
inference-service/backend/app/config/: actions.py
inference-service/backend/app/engine/: index.py
inference-service/frontend/: package-lock.json  package.json
ingestion-service/: .env.example  .gitignore  README.md  main.py  pyproject.toml
ingestion-service/app/api/routers/: ingestion.py
ingestion-service/app/engine/: generate.py
